repair some invalid STLs
Run through NetFabb cloud.

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,13 @@ test/#log.txt#
 test/test.sh
 
 test/Assembly.scad
+
+EH2.0/HingeCaps [x1] (repaired).stl
+
+EH2.0/HingeCaps [x1] (repaired).stl
+
+EH2.0/HingeCaps [x1] (repaired).stl
+
+EH2.0/HingeCaps [x1]_fixed.stl
+
+EH2.0/HingeCaps [x1] (repaired).stl
