use right hand palm instead of mirroring left

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,7 @@ Assembly/test.png
 testpalm6r.stl
 
 export-cli-palm.stl
+
+Cyborg_Beast_2/L palm_fixed.stl
+
+Cyborg_Beast_2/L palm (repaired) (repaired).stl
